--- a/pub.html
+++ b/pub.html
@@ -215,6 +215,10 @@ td.papers {
 						  Artifact: <a href="https://github.com/xlab-uiuc/csi-ae" target="_blank">https://github.com/xlab-uiuc/csi-ae</a>
 						  <br>
 						  <font color="#C40233"><b>Gilles Muller Best Artifact Award</b></font>
+						  <br>
+						  <font color="#C40233">
+					            <b>Invited to present at <a href="https://www.usenix.org/conference/srecon24americas" target="_blank">SREcon24 Americas</a></b>
+					          </font>
 					  </span>
 				  </div>
 		  </td>
