--- a/pub.html
+++ b/pub.html
@@ -217,7 +217,7 @@ td.papers {
 						  <font color="#C40233"><b>Gilles Muller Best Artifact Award</b></font>
 						  <br>
 						  <font color="#C40233">
-					            <b>Invited to present at <a href="https://www.usenix.org/conference/srecon24americas" target="_blank">SREcon24 Americas</a></b>
+					            <b>Invited for presentation by <a href="https://www.usenix.org/conference/srecon24americas" target="_blank">SREcon24 Americas</a></b>
 					          </font>
 					  </span>
 				  </div>
