sosp and mpi-sws seminar

--- a/travel.html
+++ b/travel.html
@@ -228,6 +228,7 @@ div.Section1
 						    <li>Heidelberg (2010) </li>
 						    <li>Hildesheim (2010) </li>
 						    <li>Kaiserslautern (2017) </li>
+				                    <li>Koblenz (2023) </li>
 						    <li>Lindau (2010) </li>
 						    <li>Magdeburg (2011) </li>
 						    <li>Mettlach (2023) </li>
@@ -237,6 +238,7 @@ div.Section1
 						    <li>Osnabrück (2011) </li>
 						    <li>Potsdam (2011) </li>
 						    <li>Regensburg (2010) </li>
+				 		    <li>Saarbrücken (2023) </li>
 						    <li>Trier (2011) </li>
 						    <li>Wadern (2023) </li>
 						    <li>Wolfenbüttel (2010) </li>
