--- a/travel.html
+++ b/travel.html
@@ -370,21 +370,21 @@ div.Section1
 						    <li>Baltimore, MD (2017) </li>
 						    <li>Berkeley, CA (2015, 2018) </li>
 						    <li>Big Sur, CA (2017) </li>
-					        <li>Bloomington, IL (2020, 2023) </li>
+					            <li>Bloomington, IL (2020, 2023) </li>
 						    <li>Bloomington, IN (2021) </li>
-                            <li>Boston, MA (2019, 2023) </li>
-							<li>Boulder, CO (2023) </li>
+                            			    <li>Boston, MA (2019, 2023) </li>
+						    <li>Boulder, CO (2023) </li>
 						    <li>Broomfield, CO (2014) </li>
 						    <li>Buffalo, NY (2023) </li>	  
 						    <li>Carmel-by-the-Sea, CA (2017) </li>
 						    <li>Cheyenne, WY (2018) </li>
-                            <li>Chicago, IL (many) </li>
+                            			    <li>Chicago, IL (2028--) </li>
 						    <li>Cincinnati, OH (2021) </li>
 						    <li>Clarksville, TN (2021) </li>
-							<li>Colorado Springs, CO (2023) </li>
+						    <li>Colorado Springs, CO (2023) </li>
 						    <li>Columbus, OH (2021) </li>
-							<li>Cortez, CO (2023) </li>
-							<li>Crested Butte, CO (2023) </li>
+						    <li>Cortez, CO (2023) </li>
+						    <li>Crested Butte, CO (2023) </li>
 						    <li>Cuyahoga, OH (2021) </li>
 						    <li>Custer, SD (2018) </li>
 						    <li>Denver, CO (2017, 2023) </li>
@@ -394,7 +394,7 @@ div.Section1
 						    <li>Elko, NV (2018) </li>
 						    <li>Farmington, PA (2013) </li>
 						    <li>Frankfort, KY (2021) </li>
-					        <li>Fremont, CA (2017-2018) </li>
+					            <li>Fremont, CA (2017-2018) </li>
 						    <li>Gatlinburg, TN (2022) </li>
 						    <li>Gibson City, IL (2023) </li>
 						    <li>Green Bay, WI (2022) </li>
@@ -412,12 +412,12 @@ div.Section1
 						    <li>Los Angeles, CA (2012, 2016) </li>
 						    <li>Louisville, KY (2021) </li>
 						    <li>Madison, WI (2022) </li>
-					        <li>Marshall, IN (2020) </li>
+					            <li>Marshall, IN (2020) </li>
 						    <li>Menlo Park, CA (2017-2018) </li>
 						    <li>Millbrae, CA (2018)</li>
-					        <li>Milwaukee, WI (2022)</li>
-                            <li>Monterey, CA (2015) </li>
-							<li>Montrose, CO (2023) </li>
+					            <li>Milwaukee, WI (2022)</li>
+                            	                    <li>Monterey, CA (2015) </li>
+						    <li>Montrose, CO (2023) </li>
 						    <li>Morro Bay, CA (2017) </li>
 						    <li>Nashville, TN (2022) </li>
 						    <li>Newark, CA (2017-2018) </li>
@@ -430,19 +430,19 @@ div.Section1
 						    <li>Pasadena, CA (2015) </li>
 						    <li>Placerville, CA (2018) </li>
 						    <li>Providence, RI (2023) </li>
-							<li>Pueblo, CO (2023) </li>
+						    <li>Pueblo, CO (2023) </li>
 						    <li>Rapid City, SD (2018) </li>
 						    <li>Reno, NV (2018) </li>
 						    <li>Rock Springs, WY (2018) </li>
 						    <li>Sacramento, CA (2018) </li>
 						    <li>Salt Lake City, CA (2018) </li>
 						    <li>San Diego, CA (2011-2017) </li>
-						    <li>San Francisco, CA (many) </li>
-						    <li>San Jose, CA (many) </li>
+						    <li>San Francisco, CA (2017,2023) </li>
+						    <li>San Jose, CA (2017) </li>
 						    <li>Sandusky, OH (2021) </li>
 						    <li>Santa Barbara, CA (2017) </li>
 						    <li>Santa Clara, CA (2012, 2015, 2017, 2018) </li>
-						    <li>Santa Cruz, CA (2017) </li>
+						    <li>Santa Cruz, CA (2017, 2023) </li>
 						    <li>Santa Maria, CA (2017) </li>
 						    <li>Saratoga, CA (2018) </li>
 						    <li>Savannah, GA (2016) </li>
@@ -451,11 +451,11 @@ div.Section1
 						    <li>Sioux Falls, SD (2018)</li>
 						    <li>Solvang, CA (2017) </li>
 						    <li>Springfield, IL (2019) </li>
-					        <li>St. Louis, MO (2021) </li>
+					            <li>St. Louis, MO (2021) </li>
 						    <li>State College, PA (2017) </li>
 						    <li>Sunnyvale, CA (2012, 2015) </li>
-						    <li>Champaign-Urbana, IL (2017)</li>
-						    <li>White Plains, NY (2022) </li>
+						    <li>Champaign-Urbana, IL (2018--)</li>
+						    <li>White Plains, NY (2022, 2023) </li>
                           </ul>
                         </li>
 						<li><font color="#083b89"><b>Vatican</b></font>:
