--- a/travel.html
+++ b/travel.html
@@ -457,7 +457,8 @@ div.Section1
 						    <li>State College, PA (2017) </li>
 						    <li>Sunnyvale, CA (2012, 2015) </li>
 						    <li>Champaign-Urbana, IL (2018--)</li>
-						    <li>White Plains, NY (2022, 2023) </li>
+						    <li>West Lafayette, IN (2023) </li>
+				  		    <li>White Plains, NY (2022, 2023) </li>
                           </ul>
                         </li>
 						<li><font color="#083b89"><b>Vatican</b></font>:
