--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -120,11 +120,11 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
-            <strong><a href="https://bingzhe.web.engr.illinois.edu/" target="_blank">Bingzhe Liu</a></strong>
+            <strong><a href="https://bingzhe.web.engr.illinois.edu/" target="_blank">Dr. Bingzhe Liu</a></strong>
             <br>
-            Enhancing The Reliability of Modern Service Infrastructures in The Management Plane
+            Enhancing the Reliability of Dynamic Management in Cloud Infrastructures
             <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim on Nov. 2022.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Nov. 2023.
             <br>
             Advisor: <a href="https://pbg.cs.illinois.edu/" target="_blank">Brighten Godfrey</a>
           </span>
@@ -160,7 +160,7 @@ td.papers {
             <br>
 	       Fault-Tolerant and Fault-Recovering Garbage Collection for The Actor Model: A Collage-based Approach
             <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Aug 2023.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Aug. 2023.
             <br>
             Advisor: <a href="http://osl.cs.illinois.edu/members/agha.html" target="_blank">Gul Agha</a>
           </span>
