--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -86,6 +86,22 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
+            <strong><a href="https://sampalomad.github.io" target="_blank">Runxiang (Sam) Cheng</a></strong>
+	    <br>
+            Department of Computer Science, University of Illinois at Urbana-Champaign
+            <br>
+            Advisor: <a href="https://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a>
+          </span>
+        </div>
+      </td>
+  </tr>
+	  
+  <tr>
+    <td class="date"><font color="#083b89"></font></td>
+      <td class="papers">
+        <div align="justify" class="STYLE4">
+          <p></p>
+            <span style="font-size: 12pt;">
             <strong><a href="https://jeffhj.github.io/" target="_blank">Jie Huang</a></strong>
             <br>
 	    Augmenting and Safeguarding Knowledge in Large Language Models
