--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -136,7 +136,7 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
-            <strong><a href="https://bingzhe.web.engr.illinois.edu/" target="_blank">Dr. Bingzhe Liu</a></strong>
+            <strong><a href="https://bingzhe.web.engr.illinois.edu/" target="_blank">Bingzhe Liu</a></strong>, Ph.D.
             <br>
             Enhancing the Reliability of Dynamic Management in Cloud Infrastructures
             <br>
@@ -172,7 +172,7 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
-            <strong><a href="https://dplyukhin.github.io/" target="_blank">Dan Plyukhin</a></strong>
+            <strong><a href="https://dplyukhin.github.io/" target="_blank">Dan Plyukhin</a></strong>, Ph.D.
             <br>
 	       Fault-Tolerant and Fault-Recovering Garbage Collection for The Actor Model: A Collage-based Approach
             <br>
