--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 				  <p class="STYLE223"><a href="https://thakkarparth007.github.io/" target="_blank">Parth Thakkar</a>, MS 2023 (<a href="pub/THAKKAR-THESIS-2023.pdf" target="_blank">thesis</a>) &rarr; Meta (Dev Infra)</p>
 				  <p class="STYLE223"><a href="https://essoz.github.io/" target="_blank">Yuxuan (Matt) Jiang</a>, BE 2023 &rarr; University of Michigan (PhD)</p>
 				  <p class="STYLE223"><a href="https://nsdi.dev/" target="_blank">Feiran (Alex) Qin</a>, (ShanghaiTech/UIUC), Fall 2022 &rarr; North Carolina State University (PhD)</p>
-				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Kunle Li</a>, BE 2023 &rarr; CMU (MS)</p>
+				  <p class="STYLE223"><a href="https://github.com/unw9527" target="_blank">Kunle Li</a>, BE 2023 &rarr; CMU (MS)</p>
 				  <p class="STYLE223"><a href="https://taham0.github.io/" target="_blank">Muhammad Taha</a> (LUMS) (Summer 2022) &rarr; Purdue (MS)</p>
 				  <p class="STYLE223"><a href="https://www.linkedin.com/in/kaihsun1996/" target="_blank">Kai-Hsun (Kevin) Chen</a>, M.Eng 2022 &rarr; Databricks &rarr; Anyscale</p>
 				  <p class="STYLE223"><a href="https://wenyu.io/" target="_blank">Wenyu Wang</a>, PhD 2022, co-advised by <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a>, awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/3m-foundation-fellowship" target="_blank"><font color="#E84A27">3M Foundation Fellowship</font></a> &rarr; Meta &rarr; Stellar Cyber</p>
