--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -95,6 +95,24 @@ td.papers {
         </div>
       </td>
   </tr>
+
+  <tr>
+    <td class="date"><font color="#083b89"></font></td>
+      <td class="papers">
+        <div align="justify" class="STYLE4">
+          <p></p>
+            <span style="font-size: 12pt;">
+            <strong><a href="https://tzubinyan.tw/" target="_blank">Tzu-Bin Yan</a></strong>
+	    <br>
+	    Evaluating and Extending the PacketLab Design
+            <br>
+            Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim on Dec 2023.
+            <br>
+            Advisor: <a href="https://klevchen.ece.illinois.edu/" target="_blank">Kirill Levchenko</a>
+          </span>
+        </div>
+      </td>
+  </tr>
 	  
   <tr>
     <td class="date"><font color="#083b89"></font></td>
@@ -109,22 +127,6 @@ td.papers {
             Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim on Sep. 2023.
             <br>
             Advisor: <a href="https://cs.illinois.edu/about/people/faculty/kcchang" target="_blank">Kevin Chen-Chuan Chang</a>
-          </span>
-        </div>
-      </td>
-  </tr>
-
-  <tr>
-    <td class="date"><font color="#083b89"></font></td>
-      <td class="papers">
-        <div align="justify" class="STYLE4">
-          <p></p>
-            <span style="font-size: 12pt;">
-            <strong><a href="https://tzubinyan.tw/" target="_blank">Tzu-Bin Yan</a></strong>
-            <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign
-            <br>
-            Advisor: <a href="https://klevchen.ece.illinois.edu/" target="_blank">Kirill Levchenko</a>
           </span>
         </div>
       </td>
