--- a/index.html
+++ b/index.html
@@ -361,6 +361,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 									(<a href="https://cs523-uiuc.github.io/fall20/" target="_blank">Fall 20</a>)
 									(<a href="https://cs523-uiuc.github.io/fall21/" target="_blank">Fall 21</a>)
 									(<a href="https://cs523-uiuc.github.io/spring23/" target="_blank">Spring 23</a>)
+									(<a href="https://cs523-uiuc.github.io/spring24/" target="_blank">Spring 24</a>)
 								</p>
 								<p class="STYLE223">CS 423: Operating System Design
 									(<a href="https://cs423-uiuc.github.io/spring20/" target="_blank">Spring 20</a>)
