--- a/index.html
+++ b/index.html
@@ -401,6 +401,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 						  <TD class=content_title>&nbsp;</TD>
 					      <TD class=content width="96%">
 						      <p class="STYLE223">2023 Gilles Muller Best Artifact Award at EuroSys'23</p>
+						      <p class="STYLE223">2023 (Fall) UIUC List of Teachers Ranked as Excellent (for CS 591SN)</p>
 	                                              <p class="STYLE223">2023 (Spring) UIUC List of Teachers Ranked as Excellent (for CS 523)</p>
 						      <p class="STYLE223">2022 <a href="https://www.intel.com/content/www/us/en/research/blogs/intel-rising-stars-awards-2022.html" target="_blank">Intel Rising Star Faculty Award</a></p>
 						      <p class="STYLE223">2022 <a href="https://cs.illinois.edu/news/tianyin-xus-nsf-career-award-presents-an-innovative-avenue-focused-on-configuration-management-for-cloud-computing" target="_blank">NSF CAREER Award</a></p>
@@ -481,7 +482,8 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 		     (<a href="https://medium.com/@vijayc/a-new-journal-for-systems-research-2dbbfca6b860" target="_blank">Why JSys?</a>)
 	          </p>
 	          <p class="STYLE223">2024
-	            EuroSys
+	            EuroSys,
+		    USENIX ATC,
 	          </p>
                   <p class="STYLE223">2023
 		    <a href="https://www.usenix.org/conference/osdi23" target="_blank">OSDI</a>,
@@ -547,7 +549,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 								<p class="STYLE223"><a href="https://liliatangxy.github.io/" target="_blank">Lilia Tang</a>, PhD Candidate (Fall 2020 - now), awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/ray-ozzie-computer-science-fellowship" target="_blank"><font color="#E84A27">Ray Ozzie Fellowship</font></a></p>
 	-->							
 								<p class="STYLE223"><a href="https://schai.me/" target="_blank">Siyuan Chai</a>, PhD Candidate (Fall 2021 - now)</p>
-				            			<p class="STYLE223"><a href="https://yinfangchen.github.io" target="_blank">Yinfang Chen</a>, PhD Student (Fall 2021 - now)</p>
+				            			<p class="STYLE223"><a href="https://yinfangchen.github.io" target="_blank">Yinfang Chen</a>, PhD Candidate (Fall 2021 - now)</p>
 				                                <p class="STYLE223"><a href="https://tylergu.com/" target="_blank">Tyler Gu</a>, PhD Candidate (Fall 2021 - now), awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/computer-science-gene-golub-fellowship" target="_blank"><font color="#E84A27">Gene Golub Fellowship</font></a></p>
 								<p class="STYLE223"><a href="https://shuaiwang516.github.io/" target="_blank">Shuai Wang</a>, PhD Candidate (Fall 2021 - now), co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
 	<!--
