--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 		<b>$ echo <font color="#E84A27">"I'll be teaching <a href="https://cs523-uiuc.github.io/", target="_blank">CS-523 Advanced Operating Systems</a> in Spring'23."</font></b>
 	-->
 		<br>
-		<b>$ echo <font color="#E84A27">"I co-organize <a href="https://systems-seminar-uiuc.github.io", target="_blank">UIUC Systems Reading Group</a> and <a href="https://wiki.illinois.edu/wiki/display/SoftEng", target="_blank">Software Engineering Seminar</a>."</font></b>
+		<b>$ echo <font color="#E84A27">"I co-organize <a href="https://systems-seminar-uiuc.github.io", target="_blank">UIUC Systems Reading Group</a>."</font></b>
 		</TD>
     </TR>
 	
@@ -554,8 +554,8 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 								<p class="STYLE223"><a href="https://shuaiwang516.github.io/" target="_blank">Shuai Wang</a>, PhD Candidate (Fall 2021 - now), co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
 	<!--
 				                                <p class="STYLE223"><a href="https://zzjas.com/" target="_blank">Zijie Zhao</a>, PhD Student (Fall 2022 - now), co-advised by <a href="https://lingming.cs.illinois.edu/" target="_blank">Lingming Zhang</a></p>
-	-->
 								<p class="STYLE223"><a href="https://maknee.github.io/" target="_blank">Henry Zhu</a>, PhD Student (Fall 2022 - now), co-advised by <a href="https://aishwaryaganesan.github.io/" target="_blank">Aishwarya Ganesan</a> and <a href="https://ramalagappan.github.io/" target="_blank">Ramnatthan Alagappan</a></p>
+	-->
 								<p class="STYLE223"><a href="https://www.linhao.me/" target="_blank">Hao Lin</a>, Visiting PhD Student (Fall 2023 - now)</p>
 								<p class="STYLE223"><a href="https://xinyulian.tech/" target="_blank">Xinyu (Alex) Lian</a>, MS Student (Fall 2022 - now), co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
 				            			<p class="STYLE223"><a href="https://www.linkedin.com/in/anna-mazhar/" target="_blank">Anna Mazhar</a>, MS Student (Fall 2022 - now)</p>
