--- a/index.html
+++ b/index.html
@@ -483,8 +483,8 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 		     (<a href="https://medium.com/@vijayc/a-new-journal-for-systems-research-2dbbfca6b860" target="_blank">Why JSys?</a>)
 	          </p>
 	          <p class="STYLE223">2024
-	            EuroSys,
-		    USENIX ATC,
+		    <a href="https://2024.eurosys.org/" target="_blank">EuroSys</a>,
+		    <a href="https://www.usenix.org/conference/atc24" target="_blank">USENIX ATC</a>,
 	          </p>
                   <p class="STYLE223">2023
 		    <a href="https://www.usenix.org/conference/osdi23" target="_blank">OSDI</a>,
