--- a/pub.html
+++ b/pub.html
@@ -73,6 +73,10 @@ td.papers {
 						  In Proceedings of the 29th ACM Symposium on Operating Systems Principles (<font color="#083b89"><b>SOSP'23</b></font>), Koblenz, Germany, Oct. 2023.
 						  <br>
 						  Project: <a href="https://github.com/xlab-uiuc/acto" target="_blank">https://github.com/xlab-uiuc/acto</a> (<a href="https://github.com/xlab-uiuc/acto/tree/sosp-ae" target="_blank">research artifact<a>)
+						  <br>
+						  <font color="#C40233">
+					            <b>Invited for presentation at <a href="https://events.linuxfoundation.org/kubecon-cloudnativecon-europe/" target="_blank">KubeCon/CloudNativeCon Europe 2024</a></b>
+					          </font>
 					  </span>
 				  </div>
 		</td>
@@ -217,7 +221,7 @@ td.papers {
 						  <font color="#C40233"><b>Gilles Muller Best Artifact Award</b></font>
 						  <br>
 						  <font color="#C40233">
-					            <b>Invited for presentation by <a href="https://www.usenix.org/conference/srecon24americas" target="_blank">SREcon24 Americas</a></b>
+					            <b>Invited for presentation at <a href="https://www.usenix.org/conference/srecon24americas" target="_blank">SREcon24 Americas</a></b>
 					          </font>
 					  </span>
 				  </div>
@@ -378,9 +382,9 @@ td.papers {
 							  </b>
 					          </font>
 					          <br>
-						  <font color="#C40233"><b>Xudong and Lalith are invited to present Sieve at <a href="https://kccncna2021.sched.com/event/lV0S" target="_blank">KubeCon + CloudNativeCon North America 2021</a></b></font>
+						  <font color="#C40233"><b>Invited for presentation at <a href="https://kccncna2021.sched.com/event/lV0S" target="_blank">KubeCon + CloudNativeCon North America 2021</a></b></font>
 					          <br>
-					          <font color="#C40233"><b>Lalith and Michael are invited to present Sieve at <a href="https://kubebyexample.com/community/kbe-insider" target="_blank">KBE Insider</a> (Episode 14)</b></font>
+					          <font color="#C40233"><b>Invited for presentation at <a href="https://kubebyexample.com/community/kbe-insider" target="_blank">KBE Insider</a> (Episode 14)</b></font>
 					  </span>
 				  </div>
 		  </td>
