--- a/pub.html
+++ b/pub.html
@@ -75,7 +75,7 @@ td.papers {
 						  Project: <a href="https://github.com/xlab-uiuc/acto" target="_blank">https://github.com/xlab-uiuc/acto</a> (<a href="https://github.com/xlab-uiuc/acto/tree/sosp-ae" target="_blank">research artifact<a>)
 						  <br>
 						  <font color="#C40233">
-					            <b>Invited for presentation at <a href="https://events.linuxfoundation.org/kubecon-cloudnativecon-europe/" target="_blank">KubeCon/CloudNativeCon Europe 2024</a></b>
+					            <b>Invited for presentation at <a href="https://events.linuxfoundation.org/kubecon-cloudnativecon-europe/" target="_blank">KubeCon + CloudNativeCon Europe 2024</a></b>
 					          </font>
 					  </span>
 				  </div>
