--- a/pub.html
+++ b/pub.html
@@ -75,7 +75,7 @@ td.papers {
 						  Project: <a href="https://github.com/xlab-uiuc/acto" target="_blank">https://github.com/xlab-uiuc/acto</a> (<a href="https://github.com/xlab-uiuc/acto/tree/sosp-ae" target="_blank">research artifact<a>)
 						  <br>
 						  <font color="#C40233">
-					            <b>Invited for presentation at <a href="https://events.linuxfoundation.org/kubecon-cloudnativecon-europe/" target="_blank">KubeCon + CloudNativeCon Europe 2024</a></b>
+					            <b>Selected for solution showcase at <a href="https://events.linuxfoundation.org/kubecon-cloudnativecon-europe/" target="_blank">KubeCon + CloudNativeCon Europe 2024</a></b>
 					          </font>
 					  </span>
 				  </div>
@@ -382,7 +382,7 @@ td.papers {
 							  </b>
 					          </font>
 					          <br>
-						  <font color="#C40233"><b>Invited for presentation at <a href="https://kccncna2021.sched.com/event/lV0S" target="_blank">KubeCon + CloudNativeCon North America 2021</a></b></font>
+						  <font color="#C40233"><b>Selected for presentation at <a href="https://kccncna2021.sched.com/event/lV0S" target="_blank">KubeCon + CloudNativeCon North America 2021</a></b></font>
 					          <br>
 					          <font color="#C40233"><b>Invited for presentation at <a href="https://kubebyexample.com/community/kbe-insider" target="_blank">KBE Insider</a> (Episode 14)</b></font>
 					  </span>
