--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
       I spent six wonderful years at <a href="http://www.sysnet.ucsd.edu/sysnet/"  target="_blank">sysnet</a> at the <a href="http://cseweb.ucsd.edu/"  target="_blank">University of California San Diego</a> until <a href="http://cseweb.ucsd.edu/~yyzhou/" target="_blank">my rock star advisor</a> kicked me out (I wished to be a tenured grad student<sup><a href="#ref1">1</a></sup>).
       I worked with <a href="http://www.netapp.com/atg/"  target="_blank">NetApp</a> to study production data ontap.
       I had a short experience at <a href="https://whova.com/" target="_blank">Whova</a>
-      where I learned dedication (check out Whova's <a href="event-planning-resources.html" target="_blank">resources for organizing conferences</a>).
+      where I learned dedication.
       I worked in Germany and backpacked Europe for 1.5 years at <a href="http://www.uni-goettingen.de/" target="_blank">Goettingen</a> before starting my grad school.
     </p>
 
