--- a/pub.html
+++ b/pub.html
@@ -93,6 +93,14 @@ td.papers {
 						  Yan Sun, Yifan Yuan, Zeduo Yu, Chihun Song, Reese Kuper, Jinghan Huang, Houxiang Ji, Siddharth Agarwal, Jiaqi Lou, Ipoom Jeong, Ren Wang, Jung Ho Ahn, Tianyin Xu, and Nam Sung Kim
 						  <br>
 						  In Proceedings of the 56th IEEE/ACM International Symposium on Microarchitecture (<font color="#083b89"><b>MICRO-56</b></font>), Toronto, Canada, Oct. 2023.
+						  <br>
+						  <font color="#C40233">
+					            <b>Covered by <a href="https://semiengineering.com/cxl-memory-detailed-characterization-analysis-using-micro-benchmarks-and-real-applications-uiuc-intel-labs/" target="_blank">Semiconductor Engineering</a>,
+							  <a href="https://community.intel.com/t5/Blogs/Products-and-Solutions/FPGA/CXL-Adoption-Ramps-with-New-Product-Announcements-from-Intel-and/post/1553306" target="_blank">Intel Community Blog</a>,
+							  <a href="https://news.ycombinator.com/item?id=38582400" target="_blank">Hacker News</a>,
+							  <a href="https://thenewstack.io/what-developers-need-to-know-about-intels-2024-server-chips/" target="_blank">The New Stack</a>
+							  </b>
+					          </font>
 					  </span>
 				  </div>
 		  </td>
@@ -161,6 +169,10 @@ td.papers {
 						  In Proceedings of the 17th USENIX Symposium on Operating Systems Design and Implementation  (<font color="#083b89"><b>OSDI'23</b></font>), Boston, MA, July 2023.
 						  <br>
 						  Artifact: <a href="https://gitlab.dsrg.utoronto.ca/dsrg/perspect" target="_blank">https://gitlab.dsrg.utoronto.ca/dsrg/perspect</a>
+						  <br>
+						  <font color="#C40233">
+					            <b>Featured by <a href="https://www.sigops.org/2023/perspect-exploiting-essential-characteristics-of-performance-issues-for-automatic-performance-diagnosis/" target="_blank">SIGOPS Blog</a></b>
+					          </font>
 					  </span>
 				  </div>
 		  </td>
