--- a/pub.html
+++ b/pub.html
@@ -343,8 +343,11 @@ td.papers {
 						  arXiv:2302.10366, Feb 2023.
 						  <br>
 						  Code: <a href="https://github.com/xlab-uiuc/seccomp-ebpf-upstream" target="_blank">https://github.com/xlab-uiuc/seccomp-ebpf-upstream</a>
+						  
 						  <br>
 						  <font color="#C40233"><b>Presented at Linux Plumbers Conference 2022 (<a href="pub/seccomp-ebpf-lpc.pdf" target="_blank">Revisiting eBPF Seccomp Filters</a>)</b></font>
+						  <br>
+						  <font color="#C40233"><b>Covered by <a href="https://lwn.net/Articles/857228/" target="_blank">LWN</a></b></font>
 					  </span>
 				  </div>
 		  </td>
