--- a/pub.html
+++ b/pub.html
@@ -233,7 +233,7 @@ td.papers {
 						  <font color="#C40233"><b>Gilles Muller Best Artifact Award</b></font>
 						  <br>
 						  <font color="#C40233">
-					            <b>Invited for presentation at <a href="https://www.usenix.org/conference/srecon24americas" target="_blank">SREcon24 Americas</a></b>
+					            <b>Invited for presentation at <a href="https://www.usenix.org/conference/srecon24americas/presentation/xu" target="_blank">SREcon24 Americas</a></b>
 					          </font>
 					  </span>
 				  </div>
@@ -347,7 +347,7 @@ td.papers {
 						  <br>
 						  <font color="#C40233"><b>Presented at Linux Plumbers Conference 2022 (<a href="pub/seccomp-ebpf-lpc.pdf" target="_blank">Revisiting eBPF Seccomp Filters</a>)</b></font>
 						  <br>
-						  <font color="#C40233"><b>Covered by <a href="https://lwn.net/Articles/857228/" target="_blank">LWN</a></b></font>
+						  <font color="#C40233"><b>Covered by <a href="https://lwn.net/Articles/857228/" target="_blank">LWN.net</a></b></font>
 					  </span>
 				  </div>
 		  </td>
