--- a/pub.html
+++ b/pub.html
@@ -119,6 +119,8 @@ td.papers {
 						  In Proceedings of the 29th Annual International Conference on Mobile Computing and Networking (<font color="#083b89"><b>MobiCom'23</b></font>), Madrid, Spain, Oct. 2023.
 						  <br>
 						  Artifact: <a href="https://github.com/Android-Emulation-Testing/emu-fidelity-ae" target="_blank">https://github.com/Android-Emulation-Testing/emu-fidelity-ae</a>
+						  <br>
+						  <font color="#C40233"><b>Selected as an Highlight article by SIGMOBILE Mobile Computing and Communications Review (GetMobile)</b></font>
 					  </span>
 				  </div>
 		  </td>
