--- a/travel.html
+++ b/travel.html
@@ -395,6 +395,7 @@ div.Section1
 						    <li>Eau Claire, WI (2022) </li>
 						    <li>Elko, NV (2018) </li>
 						    <li>Farmington, PA (2013) </li>
+				  		    <li>Fayetteville, TN (2024) </li>
 						    <li>Frankfort, KY (2021) </li>
 					            <li>Fremont, CA (2017-2018) </li>
 						    <li>Gatlinburg, TN (2022) </li>
@@ -403,6 +404,7 @@ div.Section1
 						    <li>Hartford, CT (2023) </li>
 						    <li>Hibbing, MN (2022) </li>
 						    <li>Honolulu/O'ahu, HI (2022) </li>
+				  		    <li>Hot Springs, AK (2024) </li>
 						    <li>Indianapolis, IN (2021) </li>  
 						    <li>Irvine, CA (2016) </li>
 						    <li>Ithaca, NY (2023) </li>
@@ -411,10 +413,12 @@ div.Section1
 						    <li>Lake Tahoe, CA / NV (2018) </li>
 						    <li>Laramie, WY (2018) </li>
 						    <li>Lexington, KY (2021) </li>
+				  		    <li>Little Rock, AK (2024) </li>
 						    <li>Los Angeles, CA (2012, 2016) </li>
 						    <li>Louisville, KY (2021) </li>
 						    <li>Madison, WI (2022) </li>
 					            <li>Marshall, IN (2020) </li>
+				       		    <li>Memphis, TN (2024) </li>
 						    <li>Menlo Park, CA (2017-2018) </li>
 						    <li>Millbrae, CA (2018)</li>
 					            <li>Milwaukee, WI (2022)</li>
@@ -456,6 +460,7 @@ div.Section1
 					            <li>St. Louis, MO (2021) </li>
 						    <li>State College, PA (2017) </li>
 						    <li>Sunnyvale, CA (2012, 2015) </li>
+				  		    <li>Tulsa, OK (2024) </li>
 						    <li>Champaign-Urbana, IL (2018--)</li>
 						    <li>West Lafayette, IN (2023) </li>
 				  		    <li>White Plains, NY (2022, 2023) </li>
