--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 				  <p class="STYLE223"><a href="https://sampalomad.github.io/" target="_blank">Sam Cheng</a>, PhD student, co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a> &rarr; Switched to the AI/ML area after two years, in 2021 </p>
 	-->			  <p class="STYLE223"><a href="https://kaiyuanzhang.com/" target="_blank">Kaiyuan Zhang</a> (UT Dallas), Summer 2020 co-advised by <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a> &rarr; Purdue University (PhD)</p>
 				  <p class="STYLE223"><a href="https://www.linkedin.com/in/ymmao/" target="_blank">Yiming Mao</a> (Nanjing University), Summer 2020 &rarr; UC San Diego (MS)</p>    
-			      	  
+			      	  <p class="STYLE224"># Scholars</p>
 				  <p class="STYLE223"><a href="https://chaitanya-bhandari.com/" target="_blank">Chaitanya B. Bhandari</a>, Research scholar, 2021--2022 &rarr; UIUC (MS)</p> 
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Yuanliang Zhang</a> (NUDT), Visiting PhD student, 2019--2020 &rarr; Assistant Professor at NUDT</p>
 				</TD>
