--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 									(<a href="https://cs423-uiuc.github.io/fall22/" target="_blank">Fall 22</a>)
 									(<a href="https://cs423-uiuc.github.io/fall23/" target="_blank">Fall 23</a>)
 								</p>
-								<p class="STYLE223">CS 591(SN): Systems Reading Group
+								<p class="STYLE223">CS 591(SN): Systems Research Seminar
 									(<a href="https://systems-seminar-uiuc.github.io/spring19/" target="_blank">Spring 19</a>)
 									(<a href="https://systems-seminar-uiuc.github.io/fall19/" target="_blank">Fall 19</a>)
 									(<a href="https://systems-seminar-uiuc.github.io/spring20/" target="_blank">Spring 20</a>)
@@ -482,9 +482,13 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 		      <a href="https://escholarship.org/uc/jsys/about" target="_blank">Journal of Systems Research</a>
 		     (<a href="https://medium.com/@vijayc/a-new-journal-for-systems-research-2dbbfca6b860" target="_blank">Why JSys?</a>)
 	          </p>
+	          <p class="STYLE223">2025
+		    <a href="https://www.asplos-conference.org/asplos-2025-call-for-papers/" target="_blank">ASPLOS</a>,
+	          </p>
 	          <p class="STYLE223">2024
 		    <a href="https://2024.eurosys.org/" target="_blank">EuroSys</a>,
 		    <a href="https://www.usenix.org/conference/atc24" target="_blank">USENIX ATC</a>,
+		    <a href="https://sesame2024.github.io/" target="_blank">SESAME</a>,
 	          </p>
                   <p class="STYLE223">2023
 		    <a href="https://www.usenix.org/conference/osdi23" target="_blank">OSDI</a>,
