--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -154,13 +154,16 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
-            <strong><a href="https://bingzhe.web.engr.illinois.edu/" target="_blank">Bingzhe Liu</a></strong>, Ph.D.
+            <strong>Hongpeng Guo</strong>
             <br>
-            Enhancing the Reliability of Dynamic Management in Cloud Infrastructures
+            Multi-objective Optimizations for Resource-efficient Large Scale Machine Learning Systems
             <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Nov. 2023.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Feb. 2024. 
+<!--
+		    passed prelim on Oct. 2022.
+-->
             <br>
-            Advisor: <a href="https://pbg.cs.illinois.edu/" target="_blank">Brighten Godfrey</a>
+            Advisor: <a href="https://monet.cs.illinois.edu/people/klara/" target="_blank">Klara Nahrstedt</a>
           </span>
         </div>
       </td>
@@ -172,13 +175,13 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
-            <strong>Hongpeng Guo</strong>
+            <strong><a href="https://bingzhe.web.engr.illinois.edu/" target="_blank">Bingzhe Liu</a></strong>, Ph.D.
             <br>
-            Multi-objective Optimizations for Resource-efficient Large Scale Machine Learning Systems
+            Enhancing the Reliability of Dynamic Management in Cloud Infrastructures
             <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim on Oct. 2022.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Nov. 2023.
             <br>
-            Advisor: <a href="https://monet.cs.illinois.edu/people/klara/" target="_blank">Klara Nahrstedt</a>
+            Advisor: <a href="https://pbg.cs.illinois.edu/" target="_blank">Brighten Godfrey</a>
           </span>
         </div>
       </td>
