--- a/pub.html
+++ b/pub.html
@@ -61,6 +61,54 @@ td.papers {
   <!--DWLayoutTable-->
   <tbody>
 	<tr>
+		<td class="date"><font color="#083b89">OSDI'24</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					<p></p>
+						<span style="font-size: 12pt;">
+						  <strong>Anvil: Verifying Liveness of Cluster Management Controllers</strong> [<a href="pub/anvil.pdf" target="_blank">pdf</a> | <a href="pub/anvil_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Xudong Sun, Wenjie Ma, Jiawei Tyler Gu, Zicheng Ma, Tej Chajed, Jon Howell, Andrea Lattuada, Oded Padon, Lalith Suresh, Adriana Szekeres, and Tianyin Xu
+						  <br>
+						  In Proceedings of the 18th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'24</b></font>), Santa Clara, CA, Jul. 2024.
+					  	</span>
+				  </div>
+		</td>
+	</tr>
+
+	<tr>
+		<td class="date"><font color="#083b89">ISCA'24</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					  <p></p>
+						  <span style="font-size: 12pt;">
+						  <strong>EcoFaaS: Rethinking the Design of Serverless Environments for Energy Efficiency</strong> [<a href="pub/ecofaas.pdf" target="_blank">pdf</a> | <a href="pub/ecofaas_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Jovan Stojkovic, Nikoleta Markela Iliakopoulou, Tianyin Xu, Hubertus Franke, and Josep Torrellas,
+						  <br>
+						  In Proceedings of the 51st International Symposium on Computer Architecture 2024 (<font color="#083b89"><b>ISCA'24</b></font>), Buenos Aires, Argentina, Jun. 2024.
+					  </span>
+				  </div>
+		</td>
+	</tr>
+
+	<tr>
+		<td class="date"><font color="#083b89">EuroSys'24</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					  <p></p>
+						<span style="font-size: 12pt;">
+						  <strong>Automatic Root Cause Analysis via Large Language Models for Cloud Incidents</strong> [<a href="pub/rca-copolot.pdf" target="_blank">pdf</a> | <a href="pub/rca-copolot_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Yinfang Chen, Huaibing Xie, Minghua Ma, Yu Kang, Xin Gao, Liu Shi, Yunjie Cao, Xuedong Gao, Hao Fan, Ming Wen, Jun Zeng, Supriyo Ghosh, Xuchao Zhang, Chaoyun Zhang, Qingwei Lin, Saravan Rajmohan, Dongmei Zhang, and Tianyin Xu
+						  <br>
+						  In Proceedings of the 19th European Conference on Computer Systems (<font color="#083b89"><b>EuroSys'24</b></font>), Athens, Greece, Apr. 2024.
+					  </span>
+				  </div>
+		</td>
+	</tr>
+
+	<tr>
 		<td class="date"><font color="#083b89">SOSP'23</font></td>
 			<td class="papers">
 				  <div align="justify" class="STYLE4">
@@ -208,7 +256,7 @@ td.papers {
 						  <span style="font-size: 12pt;">
 						  <strong>MXFaaS: Resource Sharing in Serverless Environments for Parallelism and Efficiency</strong> [<a href="pub/mxfaas.pdf" target="_blank">pdf</a> | <a href="pub/mxfaas_bib.txt" target="_blank">bib</a>]
 						  <br>
-						  Jovan Stojkovic, Tianyin Xu, Hubertus Franke, and Josep Torrellas,
+						  Jovan Stojkovic, Tianyin Xu, Hubertus Franke, and Josep Torrellas
 						  <br>
 						  In Proceedings of the 50th Annual International Symposium on Computer Architecture (<font color="#083b89"><b>ISCA'23</b></font>), Orlando, FL, June 2023.
 						  <br>
