--- a/pub.html
+++ b/pub.html
@@ -98,7 +98,7 @@ td.papers {
 				  <div align="justify" class="STYLE4">
 					  <p></p>
 						<span style="font-size: 12pt;">
-						  <strong>Automatic Root Cause Analysis via Large Language Models for Cloud Incidents</strong> [<a href="pub/rca-copolot.pdf" target="_blank">pdf</a> | <a href="pub/rca-copolot_bib.txt" target="_blank">bib</a>]
+						  <strong>Automatic Root Cause Analysis via Large Language Models for Cloud Incidents</strong> [<a href="pub/rca-copilot.pdf" target="_blank">pdf</a> | <a href="pub/rca-copilot_bib.txt" target="_blank">bib</a>]
 						  <br>
 						  Yinfang Chen, Huaibing Xie, Minghua Ma, Yu Kang, Xin Gao, Liu Shi, Yunjie Cao, Xuedong Gao, Hao Fan, Ming Wen, Jun Zeng, Supriyo Ghosh, Xuchao Zhang, Chaoyun Zhang, Qingwei Lin, Saravan Rajmohan, Dongmei Zhang, and Tianyin Xu
 						  <br>
