--- a/pub.html
+++ b/pub.html
@@ -86,7 +86,7 @@ td.papers {
 						  <br>
 						  Jovan Stojkovic, Nikoleta Markela Iliakopoulou, Tianyin Xu, Hubertus Franke, and Josep Torrellas,
 						  <br>
-						  In Proceedings of the 51st International Symposium on Computer Architecture 2024 (<font color="#083b89"><b>ISCA'24</b></font>), Buenos Aires, Argentina, Jun. 2024.
+						  In Proceedings of the 51st International Symposium on Computer Architecture (<font color="#083b89"><b>ISCA'24</b></font>), Buenos Aires, Argentina, Jun. 2024.
 					  </span>
 				  </div>
 		</td>
