--- a/index.html
+++ b/index.html
@@ -401,6 +401,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 						  <TR>
 						  <TD class=content_title>&nbsp;</TD>
 					      <TD class=content width="96%">
+						      <p class="STYLE223">2024 Dean's Award for Excellence in Research</p>
 						      <p class="STYLE223">2023 Gilles Muller Best Artifact Award at EuroSys'23</p>
 						      <p class="STYLE223">2023 (Fall) UIUC List of Teachers Ranked as Excellent (for CS 591SN)</p>
 	                                              <p class="STYLE223">2023 (Spring) UIUC List of Teachers Ranked as Excellent (for CS 523)</p>
@@ -431,11 +432,16 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
                         <TR>
                         <TD class=content_title>&nbsp;</TD>
                           <TD class=content width="96%">
+			<p class="STYLE223"><a href="https://www.usenix.org/conference/srecon24americas/presentation/xu" target="_blank">Cross-System Interaction Failures: Don't Fail through the Cracks</a> at SREcon24 Americas</p>
+			<p class="STYLE223">Acto is selected as a solution showcase at <a href="https://events.linuxfoundation.org/kubecon-cloudnativecon-europe/program/schedule/" target="_blank">KubeCon+CloudNativeCon Europe</a> 2024</p>
+			<p class="STYLE223">Virtual device farm is selected as a 2024 <a href="https://www.sigmobile.org/pubs/getmobile/" target="_blank">GetMobile</a> Research Highlight article</p>
+			<p class="STYLE223"><a href="pub/ekcfi.pdf" target="_blank">Advancing Kernel Control Flow Integrity with eBPF</a> at Linux Plumbers Conference (LPC) 2023</p>
 		        <p class="STYLE223">The Sieve team is spotlighted by <a href="https://cs.illinois.edu/news/illinois-and-vmwares-collaborative-research-develops-practical-reliability-testing-techniques-for-cluster-management-controllers" target="_blank">CS news</a></p>
 		        <p class="STYLE223">Sieve is covered by <a href="https://octo.vmware.com/a-promising-new-approach-to-reliability-testing-for-cluster-management-controllers/" target="_blank">VMware Office of CTO Blog</a> and is endorsed by <a href="https://twitter.com/kitcolbert/status/1550199936477605889" target="_blank">Kit Colbert</a> (VMware CTO)</p>
 		        <p class="STYLE223">Cozart is selected as a 2022 CACM Research Highlight article: <a href="pub/cozart-cacm.pdf" target="_blank">pdf</a></p>
 		        <p class="STYLE223">Sieve is selected for presentation at
 				 <a href="https://kccncna2021.sched.com/event/lV0S?iframe=no" target="_blank">KubeCon and CloudNativeCon</a>
+			<p class="STYLE223"><a href="pub/seccomp-ebpf-lpc.pdf" target="_blank">Revisiting eBPF Seccomp Filters</a> at Linux Plumbers Conference (LPC) 2022</p>
 			<p class="STYLE223">Sam and Wenyu are spotlighted in
 				 <a href="https://cs.illinois.edu/news/researchers-in-software-engineering-share-expertise-to-deliver-excellence" target="_blank">CS news</a>
 		        <p class="STYLE223">YiFei is spotlighted by both
@@ -488,6 +494,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 	          <p class="STYLE223">2024
 		    <a href="https://2024.eurosys.org/" target="_blank">EuroSys</a>,
 		    <a href="https://www.usenix.org/conference/atc24" target="_blank">USENIX ATC</a>,
+		    MICRO (ERC),
 		    <a href="https://sesame2024.github.io/" target="_blank">SESAME</a>,
 	          </p>
                   <p class="STYLE223">2023
