--- a/index.html
+++ b/index.html
@@ -432,15 +432,16 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
                         <TR>
                         <TD class=content_title>&nbsp;</TD>
                           <TD class=content width="96%">
+			<p class="STYLE223">Kubernetes Reliability and an Avenue to Reliable Cloud Infrastructures at IEEE Emerging Technology Reliability Roundtable and ECE 542/CS 536</p>
 			<p class="STYLE223"><a href="https://www.usenix.org/conference/srecon24americas/presentation/xu" target="_blank">Cross-System Interaction Failures: Don't Fail through the Cracks</a> at SREcon24 Americas</p>
-			<p class="STYLE223">Acto is selected as a solution showcase at <a href="https://events.linuxfoundation.org/kubecon-cloudnativecon-europe/program/schedule/" target="_blank">KubeCon+CloudNativeCon Europe</a> 2024</p>
+			<p class="STYLE223">Acto is selected as a <a href="https://static.sched.com/hosted_files/kccnceu2024/15/acto-poster-kubecon.pdf" target="_blank">solution showcase</a> at <a href="https://events.linuxfoundation.org/kubecon-cloudnativecon-europe/program/schedule/" target="_blank">KubeCon+CloudNativeCon Europe 2024</a></p>
 			<p class="STYLE223">Virtual device farm is selected as a 2024 <a href="https://www.sigmobile.org/pubs/getmobile/" target="_blank">GetMobile</a> Research Highlight article</p>
 			<p class="STYLE223"><a href="pub/ekcfi.pdf" target="_blank">Advancing Kernel Control Flow Integrity with eBPF</a> at Linux Plumbers Conference (LPC) 2023</p>
 		        <p class="STYLE223">The Sieve team is spotlighted by <a href="https://cs.illinois.edu/news/illinois-and-vmwares-collaborative-research-develops-practical-reliability-testing-techniques-for-cluster-management-controllers" target="_blank">CS news</a></p>
 		        <p class="STYLE223">Sieve is covered by <a href="https://octo.vmware.com/a-promising-new-approach-to-reliability-testing-for-cluster-management-controllers/" target="_blank">VMware Office of CTO Blog</a> and is endorsed by <a href="https://twitter.com/kitcolbert/status/1550199936477605889" target="_blank">Kit Colbert</a> (VMware CTO)</p>
 		        <p class="STYLE223">Cozart is selected as a 2022 CACM Research Highlight article: <a href="pub/cozart-cacm.pdf" target="_blank">pdf</a></p>
 		        <p class="STYLE223">Sieve is selected for presentation at
-				 <a href="https://kccncna2021.sched.com/event/lV0S?iframe=no" target="_blank">KubeCon and CloudNativeCon</a>
+				 <a href="https://kccncna2021.sched.com/event/lV0S?iframe=no" target="_blank">KubeCon and CloudNativeCon North America 2021</a>
 			<p class="STYLE223"><a href="pub/seccomp-ebpf-lpc.pdf" target="_blank">Revisiting eBPF Seccomp Filters</a> at Linux Plumbers Conference (LPC) 2022</p>
 			<p class="STYLE223">Sam and Wenyu are spotlighted in
 				 <a href="https://cs.illinois.edu/news/researchers-in-software-engineering-share-expertise-to-deliver-excellence" target="_blank">CS news</a>
