--- a/index.html
+++ b/index.html
@@ -569,7 +569,6 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 				                                <p class="STYLE223"><a href="https://zzjas.com/" target="_blank">Zijie Zhao</a>, PhD Student (Fall 2022 - now), co-advised by <a href="https://lingming.cs.illinois.edu/" target="_blank">Lingming Zhang</a></p>
 								<p class="STYLE223"><a href="https://maknee.github.io/" target="_blank">Henry Zhu</a>, PhD Student (Fall 2022 - now), co-advised by <a href="https://aishwaryaganesan.github.io/" target="_blank">Aishwarya Ganesan</a> and <a href="https://ramalagappan.github.io/" target="_blank">Ramnatthan Alagappan</a></p>
 	-->
-								<p class="STYLE223"><a href="https://www.linhao.me/" target="_blank">Hao Lin</a>, Visiting PhD Student (Fall 2023 - now)</p>
 								<p class="STYLE223"><a href="https://xinyulian.tech/" target="_blank">Xinyu (Alex) Lian</a>, MS Student (Fall 2022 - now), co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
 				            			<p class="STYLE223"><a href="https://www.linkedin.com/in/anna-mazhar/" target="_blank">Anna Mazhar</a>, MS Student (Fall 2022 - now)</p>
 				                                <p class="STYLE223"><a href="https://pratiksampat.web.illinois.edu/" target="_blank">Pratik Rajesh Sampat</a>, MS Student (Fall 2022 - now), co-advised by <a href="https://ghose.web.illinois.edu/" target="_blank">Saugata Ghose</a></p>
@@ -628,6 +627,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 	-->			  <p class="STYLE223"><a href="https://kaiyuanzhang.com/" target="_blank">Kaiyuan Zhang</a> (UT Dallas), Summer 2020 co-advised by <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a> &rarr; Purdue University (PhD)</p>
 				  <p class="STYLE223"><a href="https://www.linkedin.com/in/ymmao/" target="_blank">Yiming Mao</a> (Nanjing University), Summer 2020 &rarr; UC San Diego (MS)</p>    
 			      	  <p class="STYLE224"># Scholars</p>
+				  <p class="STYLE223"><a href="https://www.linhao.me/" target="_blank">Hao Lin</a>, Visiting PhD student, 2023--2024 &harr; Tsinghua University</p>
 				  <p class="STYLE223"><a href="https://chaitanya-bhandari.com/" target="_blank">Chaitanya B. Bhandari</a>, Research scholar, 2021--2022 &rarr; UIUC (MS) &rarr; TigerBeetle</p> 
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Yuanliang Zhang</a> (NUDT), Visiting PhD student, 2019--2020 &rarr; Assistant Professor at NUDT</p>
 				</TD>
